# Grabphics

./: CMakeLists.txt  build.sh
include/: shaders.hpp
include/glad/: glad.h
shader_files/: inverse_vertex.vert  multicolor_fragment.frag  normal_vert.vert  texture_fragment.frag  yellow_fragment.frag
src/: glad.c  main.cpp  shaders.cpp
